--- a/spring-security2/src/main/resources/templates/login.html
+++ b/spring-security2/src/main/resources/templates/login.html
@@ -37,6 +37,8 @@
               <div class="mb-3 form-check">
                 <input class="form-check-input" type="checkbox"
                   id="remember-me" name="remember-me">
+
+                 <!-- SecurityConfigとここにremember-me を記述することで、クッキーに「remember-me」を保持 -->
                 <label class="form-check-label" for="remember-me">
                   ログインしたままにする
                 </label>
