--- a/spring-security2-db/src/main/resources/templates/layout/layout.html
+++ b/spring-security2-db/src/main/resources/templates/layout/layout.html
@@ -28,6 +28,7 @@
   <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
   <!-- DataTablesのJSを追加 -->
+  <!-- 下記の8行でひとまとまり。 どれか一つでも欠けると全て表示されなくなる -->
   <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
   <script th:src="@{/webjars/datatables/js/jquery.dataTables.min.js}"></script>
   <script th:src="@{/webjars/datatables/js/dataTables.bootstrap5.min.js}"></script>
