--- a/spring-security2-db/src/main/resources/templates/register.html
+++ b/spring-security2-db/src/main/resources/templates/register.html
@@ -56,13 +56,20 @@
 
               <div class="mb-3">
                 性別
+                
                 <div class="ms-2 form-check"
                   th:each="gender :${T(com.example.demo.util.Type).GENDERS}">
+                  
                   <input class="form-check-input" type="radio"
                     th:field="*{gender}" th:value="${gender.key}">
                   <label class="form-check-label"
                     th:for="${#ids.prev('gender')}" th:text="${gender.value}">
                   </label>
+                  <!-- ブラウザでアクセスすると、idとforの値が同じになります(th:field="*{gender}" はidも兼ねる)
+	                <input type ="radio" id ="gender1">
+	                <label for="gender1">選択しない</label>
+				  -->
+				  
                 </div>
               </div>
 
